--- a/test-cra-3/.circleci/config.yml
+++ b/test-cra-3/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  packtracker: packtracker/report@dev:2.2.8
+  packtracker: packtracker/report@2.2.8
 
 workflows:
   packtracker:
